--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.19.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.10.3",
     "axios": "^1.5.0",
     "bootstrap": "^5.1.3",
     "firebase": "^10.3.1",
@@ -13,9 +15,11 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-toast-notifications": "^2.5.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
@@ -44,6 +48,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {}
+  }
 }
